--- a/Intro_to_programming/MakeaWebPage/style.css
+++ b/Intro_to_programming/MakeaWebPage/style.css
@@ -3,42 +3,32 @@ Author: Kevin Hyun
 Creation Date: 20 June 2017
 Project: MakeaWebPage Udacity
 */
-
-.app{
-    flex: 1;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-}
 body {
     background-color: powderblue;
 }
-.Introduction {
-    color: red;
+.header {
+    color: black;
     font-size: 50px;
 }
-.Explanation{
-  font-size: 15px;
-}
-.highlight{
+.highlight {
   font-style: italic;
   font-size: 110%;
-   color: green;
+   color: orange;
 }
-.Flex{
+.box {
   display: -webkit-flex;
   display: flex;
   align-items: flex-end;
 }
-.Sana_Twice{
+.image {
   max-width: 30%;
   max-height: 30%;
 }
-.text_flex{
-  background-color: red;
+.text {
+  color: green;
+
   font-size: 25px;
 }
 p {
-    color: red;
+    background-color: black;
 }
